# karsheft-flock

./: pyproject.toml
docs/: cicd.md  cli-spec.md  federation.md  flock-package-format.md  mirror-protocol.md  trust-model.md
src/flock/: cli.py  installer.py  lockfile.py  manifest.py  resolver.py  verify.py
src/karsheft_flock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_lockfile.py  test_manifest.py  test_verify.py
